TFP-5680 Disable test som tester at det opprettes vk-oppgave ved overlapp sykepenger. Mock må opprettes - gjøres senere